--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,12 +1,13 @@
-/* body {
-    background-color : lightslategray;
-    background-image: url("../images/01-02-02_background-img.jpg") ;
-}
- */
- body {
-    background-color : lightslategray;
-    background-image: url("/assets/images/01-02-02_background-img.jpg") ;
+/* body{
+    background-color: lightgrey;
+    background-image: url("../images/background-image.jpg");
+} */
+
+body{
+    background-color: lightgrey;
+    background-image: url("/assets/images/background-img.jpg");
 }
 
-
-h2 { color: orangered; }
+h2 {
+    color: orangered;
+}
